--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/cosminHncu/find_movie.git",
+  "homepage": "https://cosminhncu.github.io/find_movie",
   "name": "find_movie",
   "version": "0.1.0",
   "private": true,
